# wz-server

./: Procfile  README.md  pyproject.toml  requirements.txt  vercel.json
src/: __init__.py  main.py
