[tool.poetry]
name = "wz-server"
version = "0.1.0"
description = ""
authors = ["dio19 <hernandezdionisiooscar@gmail.com>"]
license = "Open Source"

[tool.poetry.dependencies]
python = "^3.10"
Flask = "2.1.2"
Flask-PyMongo = "^2.3.0"
certifi = "^2022.5.18"
pymongo = "^4.1.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
